Add Seeder for Authorities